Improve 5 html & service worker: add crossorigin, cache check protocol & 206

--- a/share/account.html
+++ b/share/account.html
@@ -19,7 +19,8 @@
 
     <link rel="manifest" href="manifest/account.json">
 
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" crossorigin="anonymous"
+        href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
     <style>
 
