--- a/share/ktv.html
+++ b/share/ktv.html
@@ -19,7 +19,8 @@
 
     <link rel="manifest" href="manifest/ktv.json">
 
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:FILL@0..1">
+    <link rel="stylesheet" crossorigin="anonymous"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:FILL@0..1">
 
     <style>
 
