--- a/share/day_timer.html
+++ b/share/day_timer.html
@@ -19,7 +19,8 @@
 
     <link rel="manifest" href="manifest/day_timer.json">
 
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" crossorigin="anonymous"
+        href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
     <style>
 html {
